--- a/.vscode/styles.css
+++ b/.vscode/styles.css
@@ -12,12 +12,12 @@ h1, h2, h3, h4, h5, h6, span  {
     color: #242424;
     text-align: center;
     line-height: 1.25;
-}
 
+}
 h1 {
     font-size: 36px;
-}
 
+}
 p {
     line-height: 1.5;
     font-size: 16px;
@@ -26,26 +26,23 @@ p {
      li {
        list-style: type none;
      }
-
      .flex {
         display: flex;
-     }
-
-     .flex-1 {
-        flex: 1;
 
      }
-
-     .row {
+.flex-1 {
+    flex: 1;
+    .row {
         width: 100%;
         max-width: 800px;
-        Margin: 0 auto;
-     }
+        margin: 0 auto;
 
-     .text-purple {
-        color: #0630b1;
-     }
+    }
+.text--purple {
+    color: #6030b1;
 
+}
+}
 /* NAVAGATION BAR*/
 
 nav {
@@ -70,59 +67,36 @@ nav {
     font-weight: 700;
 }
 
-.nav__link--anchor--primary {
+.nav__link--anchor--primay {
     background-color: #0630b1;
     padding: 8px 20px;
     border-radius: 50px;
     color: white;
+    transition: all 300ms ease;
 }
 
 .nav__link--anchor--primary:hover {
     background-color: #5d3eff;
 }
-
 .personal__logo {
     font-size: 24px;
-    color: #0630b1;
+    color: #6o3ob1;
     margin: 0 12px;
-    font-weight: bold;
+    font: bold;
 }
 
-/* ABOUT ME */
-
+/* About Me*/
 
 #about-me {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-}
 
-/* ABOUT ME*/
-
-
-#about-me {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column ;
 }
 .about-me__info--container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.about-me__picture--mask {
-    width: 100px;
-    height: 100px;
-}
 
-
-/* ABOUT ME*/
-
-#about-me {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
 }
 .about-me__info--container {
     display: flex;
@@ -135,36 +109,47 @@ nav {
 
 }
 .about-me__picture--mask {
-    width: 10px;
+    width: 100px;
     height: 100px;
     border-radius: 50%;
     overflow: hidden;
-    box-shadow: 0 8px 16px rgba(0, 0, 0);
+    box-shadow: 0 8px 16px; rgba(0, 0, 0, 0.16)
     margin-bottom: 28px;
+
+
+
 }
 
 .about-me__picture {
     width: 100%;
-    
-
-
-    /* Improving my own skills */
-    transform: scale(1.5);
-    padding-top: 8px;
+/* Improving My Own Picture */
+transform: scale(1.5);
+padding-top: 8px;
 
 }
-
 .about-me__info--title {
-    margin-bottom: 16;
+    margin-bottom: 16px;
+
 }
+
+
 .about-me__info--para {
-font-size: 28px;
-    margin-bottom: 28;
-} 
-    
-.about-me__link {
     font-size: 20px;
+    margin-bottom: 28px;
+}
+.about-me__link {
+    font-size: 28px;
     color: #242424;
     text-decoration: none;
     padding: 0 16px;
+
+}
+.about-me__img--container {
+    flex: -1;
+    display: flex;
+    align-items: center;
+}
+.about-me__img {
+    width: 100%;
+    
 }
